force-app/main/default/objects/Round_Robin__c/Round_Robin__c.object-meta.xml
<CustomObject>
    <description>A &quot;Round Robin&quot; object is a system that fairly allocates real estate properties to participating brokers or agents. It ensures an even distribution of property listings, allowing each agent an equal opportunity to represent and work on listings. This mechanism promotes fairness, transparency, and efficiency in property assignment within a real estate agency.</description>
    <label>Round Robin</label>
    <nameField>
        <displayFormat>RR-{0000000}</displayFormat>
        <label>Round Robin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>