force-app/main/default/objects/Round_Robin__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Round Robins</relationshipLabel>
    <relationshipName>Round_Robins</relationshipName>
    <type>Lookup</type>
</CustomField>