force-app/main/default/objects/Round_Robin__c/fields/Route_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Route_Sequence__c</fullName>
    <label>Route Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>