force-app/main/default/objects/Round_Robin__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>State__c.Country__c</field>
            <operation>equals</operation>
            <valueField>$Source.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Round Robins</relationshipLabel>
    <relationshipName>Round_Robins</relationshipName>
    <type>Lookup</type>
</CustomField>