force-app/main/default/objects/Round_Robin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Route_Sequence__c</columns>
    <columns>User__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>